--- a/AboutUs.html
+++ b/AboutUs.html
@@ -20,25 +20,44 @@
         </ul>
     </nav>
     <title> About Us </title>
+<!-- <body style="background-image: url(/WebProject/images/coffee.jpg);">    -->
 <body style="background-color: #864406b9;">
     
   <main class="container">
     <section class="about card">
       <div class="about-wrapper">
       <div class="about-image">
-        <img src="cozy-coffee-shop-stockcake.jpg" style="width:500px;height:300px;"> 
+        <img src="images/cozy-coffee-shop-stockcake.jpg" style="width:500px;height:300px;"> 
         <figcaption style="text-align: center;"> <i>Our counter on a slow weekday afternoon</i> </figcaption>
-      </div>
+      </div> 
     <div class="about-text">
       <h2>Our Story</h2>
       <p>
-        Founded in the heart of Vancouver's historic Gastown, <strong>The Brew on Cordova</strong> began
-        as a cozy space for students, artists, and locals to share ideas over handcrafted coffee.
-        Our mission is simple: serve great coffee, support local roasters, and create a place where
+        Founded in the heart of Vancouver's historic Gastown, what started as a vision of community and caffeine between friends, has become so much more.  <strong>The Brew on Cordova</strong> has become a cozy space for students, artists, and locals to share ideas over handcrafted coffee. Our shop was built on the idea that good coffee brings people together. Our values keep us grounded, from the beans we choose to the atmosphere we create. 
+
+        <br><br><strong>Our mission is simple:</strong> serve great coffee, support local roasters, and create a place where
         everyone feels at home.
       </p>
     </div>
-
+  </div>
+    </section>
+    <section class="about card">
+      <div class="about-wrapper">
+      <div class="about-text">
+      <h2>Location & Hours </h2>
+      <p> Located right at the crossroads of W Cordova St and Abbott in the heart of Vancouver. 
+      </p> 
+      <ul> <li><b>Monday:</b>   7:30am - 9:00pm</li>
+      <li><b>Tuesday:</b>     7:30am - 9:00pm</li>
+      <li><b>Wednesday:</b>   7:30am - 9:00pm</li>
+      <li><b>Thursday: </b>   7:30am - 9:00pm</li>
+      <li><b>Friday:</b>      7:30am - 9:00pm</li>
+      <li><b>Saturday:</b>    7:30am - 9:00pm</li>
+      <li><b>Sunday:</b> CLOSED</li>
+      </ul>
+    </div> 
+    <div class="about-image">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d774.015221579272!2d-123.10716679303322!3d49.283016288225134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548671007c38a19f%3A0xeb3911419a9cec27!2sPet%20Psychic!5e0!3m2!1sen!2sca!4v1763598602781!5m2!1sen!2sca" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     </section>
 
@@ -47,88 +66,75 @@
 
       <div class="grid team-grid">
          <article class="team-card">
-         <img src="GP_Barista.png" alt="Grayson — Head Barista" style="width:500px;height:300px;">
+         <img src="images/GP_Barista.png" alt="Grayson — Head Barista" style="width:500px;height:300px;">
 
           <div class="team-text">
-            <h3>Grayson – Head Barista</h3>
+            <h3>Grayson – Head Barista</h3><br>
             <p>Grayson crafts every espresso with passion and creativity. When he's not dancing around behind the bar, he's pretending he's a DJ, finding the perfect music for every occaision on the sound system. </p>
           </div>
       </article>
       <article class="team-card">
-       <img src="IMG_7334.jpg" alt="Luke — Owner" style="width:500px;height:300px;">
-
+       <img src="images/handsome.jpg" alt="Luke — Owner" style="width:500px;height:300px;">
         <div class="team-text">
-          <h3>Luke - Owner</h3>
-          <p>Luke has a keen eye for design and business management. Every part of the cafe fits together in his mind like a puzzle piece, until it all comes together in his artistic vision</p>
+          <h3>Luke - Owner</h3><br>
+          <p>Luke has a keen eye for design and business management. Every part of the cafe fits in his mind like a puzzle piece, until it all comes together in his artistic vision. </p>
         </div>
       </article>
     </div>
 
       <div class="grid team-grid">
          <article class="team-card">
-          <img src="IMG_7334.jpg" style="width:500px;height:300px;">
+          <img src="images/chef-in-kitchen-stockcake.jpg" style="width:500px;height:300px;">
           <div class="team-text"> 
-            <h3> Victor - Head Chef </h3>
-            <p> Victor is always hard at work in the kitchens in the backroom, either cooking up sandwiches or baking biscuits. Just holler "Here Chef!" and he'll come running. Like any proper chef, he may meet any request with swearing, but he'll get it done with skill, finnesse, and the smallest smidge of panache. </p>
+            <h3> Victor - Head Chef </h3><br>
+            <p> Victor is always hard at work in the kitchens in the backroom, either cooking up sandwiches or baking biscuits. Just holler: "Here Chef!" and he'll come running. Like any proper chef, he may meet any request with swearing, but he'll get it done with skill, finnesse, and the smallest smidge of panache. </p>
           </div>
           </article>
        <article class="team-card">
-        <img src="IMG_7334.jpg" alt="Luke — Owner" style="width:500px;height:300px;">
+        <img src="images/smiling.jpg" style="width:500px;height:300px;">
           <div class="team-text">
-          <h3> Austen - Vibe Specialist </h3>
-          <p> Austen doesn't do much, but he's always around spreading good vibes! If you have any odd orders he's your guy, and you can trust he'll answer you bluntly and honestly. </p>
+          <h3> Austen - Vibe Specialist </h3><br>
+          <p> Austen's always around spreading good vibes! If you have any odd orders he's your guy, and you can trust he'll answer you bluntly and honestly.  </p>
         </article> 
       </div>
       </section> 
-
-    <section class="values card">
-      <h2>What We Stand For</h2>
-      <ul>
-        <li> Sustainable sourcing from local roasters</li>
-        <li> Eco-friendly packaging and practices</li>
-        <li> Supporting local art and live music</li>
-      </ul>
-    </section>
 
     <section class="team card">
       <h2> Reviews and Satisfied Customers </h2> 
 
       <div class="grid team-grid">
          <article class="team-card">
-          <img src="Kyubey.jpg" style="width:500px;height:400px;">
-          <div class="team-text"> 
-            <h3> Kyubey - Satisfied Customer </h3>
-            <p> They always give me lots of love and free pup cups! My favorite spot to hang out </p>
+           <img src="Kyubey.jpg" style="width:500px;height:300px;">
+           <div class="team-text"> 
+             <h3> Kyubey - Satisfied Customer </h3><br>
+             <p> They always give me lots of love and free pup cups! My favorite spot to hang out, they even let me lick up leftovers! If you see me lazing around, feel free to offer belly scratches! </p>
           </div>
-          </article>
-         <article class="team-card">
-          <img src="Woman_Customer.jpg" style="width:500px;height:400px;">
+        </article>
+        <article class="team-card">
+          <img src="images/Woman_Customer.jpg" style="width:500px;height:300px;">
           <div class="team-text"> 
-            <h3> Andrea - Satisfied Customer </h3>
-            <p> Great atmosphere, great drinks and staff. The perfect vibe for those gentle autmn days while I work on my novel. Plus, the boys aren't that bad to look at either ^^ </p>
+            <h3> Andrea - Satisfied Customer </h3><br>
+            <p> Great atmosphere, great drinks and staff. The perfect vibe for those gentle autumn days while I work on my novel. Plus, the boys aren't that bad to look at either ^^ </p>
           </div>
-          </article>
+        </article>
       </div>
-    </section>
+    </main>
 
+<footer class="site-footer">
+  <div class="footer-inner container">
 
-  </main>
+    <div class="footer-info">
+      <p><strong>The Brew on Cordova</strong></p>
+      <p>1423 Cordova Drive, Vancouver BC V5R S9T</p>
+      <p><a href="mailto:thebrew@cordova.ca">thebrew@cordova.ca</a></p>
+      <p>+1 (778) 345-5612</p>
+    </div>
 
+    <div class="footer-info">
+      <img src="pictures and visuals/The_Brew_logo.jpg" alt="Logo">
+      <p>&copy; 2025 The Brew on Cordova. All rights reserved.</p>
+    </div>
 
-
-
-
-
-
-
-<footer>
-        <div>
-            <p>&copy; 2025 The Brew on Cordova</p>
-            <p>1423 Cordova drive, Vancouver BC V5R S9T</p>
-            <p>thebrew@cordova.brew.ca</p>
-            <p> +1 (778) 345-5612</p>
-        </div>
-
-</footer>
+  </div>
 </body>
 </html>
