--- a/AboutUs.html
+++ b/AboutUs.html
@@ -104,7 +104,7 @@
 
       <div class="grid team-grid">
          <article class="team-card">
-           <img src="Kyubey.jpg" style="width:500px;height:300px;">
+           <img src="images/Kyubey.jpg" style="width:500px;height:300px;">
            <div class="team-text"> 
              <h3> Kyubey - Satisfied Customer </h3><br>
              <p> They always give me lots of love and free pup cups! My favorite spot to hang out, they even let me lick up leftovers! If you see me lazing around, feel free to offer belly scratches! </p>
